force-app/main/default/objects/WorkspaceBooking__c/WorkspaceBooking__c.object-meta.xml
<CustomObject>
    <label>Workspace Booking</label>
    <nameField>
        <displayFormat>WB-{0000}</displayFormat>
        <label>Workspace Booking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workspace Bookings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>