force-app/main/default/objects/WorkspaceBooking__c/fields/BookedforDate__c.field-meta.xml
<CustomField>
    <fullName>BookedforDate__c</fullName>
    <label>Booked for Date</label>
    <type>Date</type>
</CustomField>