force-app/main/default/objects/WorkspaceBooking__c/fields/WorkspaceInfo__c.field-meta.xml
<CustomField>
    <fullName>WorkspaceInfo__c</fullName>
    <label>Workspace Info</label>
    <referenceTo>Workspace_Info__c</referenceTo>
    <relationshipLabel>Workspace Bookings</relationshipLabel>
    <relationshipName>Workspace_Bookings</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>