force-app/main/default/objects/WorkspaceBooking__c/fields/WorkspaceNo__c.field-meta.xml
<CustomField>
    <fullName>WorkspaceNo__c</fullName>
    <formula>WorkspaceInfo__r.Workspace_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Workspace No.</label>
    <type>Text</type>
</CustomField>