force-app/main/default/objects/WorkspaceBooking__c/fields/WorkspaceType__c.field-meta.xml
<CustomField>
    <fullName>WorkspaceType__c</fullName>
    <formula>TEXT(WorkspaceInfo__r.WorkspaceType__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Workspace Type</label>
    <type>Text</type>
</CustomField>